<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/register_background"
    android:visibility="visible"
    tools:context=".RegisterActivity">



    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_full_name"
        android:inputType="textPersonName"
        android:textSize="16dp"
        android:typeface="serif"/>


    <EditText
        android:id="@+id/aadhaar_no"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_aadhaar_number"
        android:inputType="number"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:typeface="serif"
        />

    <EditText
        android:id="@+id/contact_no"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_contact_number"
        android:inputType="phone"
        android:layout_marginTop="8dp"
        android:textSize="16dp"
        android:typeface="serif"
        />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_e_mail_id"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:typeface="serif"
        />

    <EditText
        android:id="@+id/dob"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_your_date_of_birth"
        android:inputType="date"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:typeface="serif"
        />


    <TextView
        android:id="@+id/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender:"
        android:textSize="16dp"
        android:typeface="serif"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:layout_marginTop="8dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioGroup
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/Male"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layoutDirection="inherit"
                android:text="Male" />

            <RadioButton
                android:id="@+id/Female"
                android:layout_width="92dp"
                android:layout_height="wrap_content"

                android:text="Female" />

            <RadioButton
                android:id="@+id/Other"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="Other" />
        </RadioGroup>


    </LinearLayout>


    <Button
        android:id="@+id/btregister"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="Register"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:typeface="serif"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:hint="@string/not_register"
            android:text="Already Register ?"
            android:textColor="#F80505"
            android:textSize="16sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="449dp" />

        <TextView
            android:id="@+id/txlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="253dp"
            tools:layout_editor_absoluteY="451dp" />
        




    </LinearLayout>




</LinearLayout>
